2011-04-10  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Maciej Stachowiak.

        Car model dropdowns at audiusa.com lay out incorrectly with compositing enabled
        https://bugs.webkit.org/show_bug.cgi?id=56660
        
        When overflow on an element changes, we need to inform compositing
        layers which create and position an "ancestor clipping" layer based
        on that overflow. Do this by triggering a rebuild of compositing layers
        when overflow changes on a layer whose stacking context has compositing
        descendants. (We can't just check whether the layer itself has compositing
        descendants, because overflow follows the render tree, but compositing
        follows the z-order tree.)

        Test: compositing/geometry/ancestor-overflow-change.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::styleChanged):
        * rendering/RenderLayer.h:
        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::updateGraphicsLayerGeometry):

2011-04-10  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Ariya Hidayat.

        Allow ShadowBlur to re-use the last buffer if it already contains the correct shadow
        https://bugs.webkit.org/show_bug.cgi?id=58161
        
        ShadowBlur already has a singleton scratch buffer that is re-used
        between shadows. Enhance use of this scratch buffer to avoid drawing
        and blurring the shadow if the results will match what is already
        in the buffer.
        
        Cleaned up ShadowBlur code to remove beginShadowLayer() and endShadowLayer(),
        which ended up with little reusable code after adding the re-use logic.

        * platform/graphics/FloatRect.cpp:
        (WebCore::enclosingIntRect): Replace safeFloatToInt() with the existing
        clampToInteger() from MathExtras.h
        
        * platform/graphics/FloatSize.h: